use solid-repl from the same multirepo
had to disable HMR

also had to add vite special handling for cjs source dependencies (see https://vitejs.dev/guide/dep-pre-bundling.html#monorepos-and-linked-dependencies)

also had to force-add assert as dependency of @babel/helper-module-imports in the toplevel .yarnrc.yml

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@solid-primitives/storage": "^1.1.1",
     "@solid-primitives/throttle": "^1.1.2",
     "@solid.js/docs": "^1.0.38",
+    "babel-plugin-jsx-dom-expressions": "^0.33.7",
     "fuse.js": "^6.5.3",
     "highlight.js": "^11.5.0",
     "monaco-editor": "0.31.1",
